Fixed the search bar to be aligned with the plant cards

--- a/public/css/gardenpage.css
+++ b/public/css/gardenpage.css
@@ -158,7 +158,7 @@
   display: flex;
   align-items: center;      
   gap: 10px;                  
-  width: 90%;
+  width: 96.5%;
   padding-bottom: 2vh;
   padding-top: 1vh;
 }
@@ -166,7 +166,7 @@
 .search-wrapper {
   position: relative;
   flex: 1;            
-  padding-left: 2vh;    
+  padding-left: 3vw;   
 }
 
 #crop-search {
